@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2020 Raffael Herzog
+ *  Copyright (c) 2021 Raffael Herzog
  *
  *  Permission is hereby granted, free of charge, to any person obtaining a copy
  *  of this software and associated documentation files (the "Software"), to
@@ -27,21 +27,21 @@ configurations {
   processorTestsClasspath
   processorTestsProcessorPath
 }
-configurations.processorTestsProcessorPath.extendsFrom configurations.testCompile
+configurations.processorTestsProcessorPath.extendsFrom configurations.testImplementation
 
-dependencySets {
-  javapoet '1.12.1', 'com.squareup', 'javapoet'
+libs {
+  javapoet 'com.squareup:javapoet:1.13.0'
 }
 
 dependencies {
   api project(':tools:model')
-  api dependencySets.javapoet
+  api libs.javapoet
 
-  testImplementation dependencySets.tsconfig
+  testImplementation libs.tsconfig
   testImplementation group: 'org.ow2.asm', name: 'asm', version: '8.0'
   processorTestsClasspath project(':annotations')
-  processorTestsClasspath dependencySets.tsconfig
-  processorTestsClasspath dependencySets.vavr
+  processorTestsClasspath libs.tsconfig
+  processorTestsClasspath libs.vavr
   processorTestsClasspath sourceSets.test.output.classesDirs
 }
 
@@ -56,6 +56,8 @@ test {
   doFirst {
     doPrepareProcessorTests()
   }
+  jvmArgs '--enable-preview',
+          '--add-opens', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
 }
 
 task prepareProcessorTests() {
@@ -74,6 +76,35 @@ def doPrepareProcessorTests() {
   processorTestsProperties.withOutputStream {props.store(it, "Generated by gradle ${new Date()}")}
 }
 
-idea.module {
-  testSourceDirs += file('src/test/cases')
+project('test-cases') {
+  apply plugin: 'java'
+  apply plugin: 'idea'
+  ext.publishToMaven = false
+
+  def processor = parent
+  def casesDir = processor.file('src/test-cases')
+
+  buildDir = file("$processor.buildDir/test-cases-target")
+
+  tasks.withType(JavaCompile) {
+    options.release.set 15
+    options.compilerArgs.add '--enable-preview'
+  }
+
+  jar {
+    enabled false
+  }
+
+  dependencies {
+    testImplementation project(':annotations')
+    testImplementation libs.tsconfig
+    testImplementation libs.vavr
+    testImplementation processor.sourceSets.test.output.classesDirs
+  }
+  compileTestJava {
+    dependsOn processor.compileTestJava
+  }
+  idea.module {
+    testSourceDirs += casesDir
+  }
 }
